# pkmn-scraper

./: .gitignore  Cargo.toml
changeset/: Cargo.toml
changeset/src/: lib.rs
diffs/ancient_origins/: changelog.text  data.json
diffs/aquapolis/: changelog.text  data.json
diffs/arceus/: changelog.text  data.json
diffs/astral_radiance/: changelog.text  data.json
diffs/base_set/: changelog.text  data.json
diffs/base_set_2/: changelog.text  data.json
diffs/battle_styles/: changelog.text  data.json
diffs/best_of_game/: changelog.text  data.json
diffs/black_white/: changelog.text  data.json
diffs/black_white_promos/: changelog.text  data.json
diffs/boundaries_crossed/: changelog.text  data.json
diffs/brea_kpoint/: changelog.text  data.json
diffs/brea_kthrough/: changelog.text  data.json
diffs/brilliant_stars/: changelog.text  data.json
diffs/burning_shadows/: changelog.text  data.json
diffs/call_of_legends/: changelog.text  data.json
diffs/celebrations/: changelog.text  data.json
diffs/celestial_storm/: changelog.text  data.json
diffs/champion_s_path/: changelog.text  data.json
diffs/chilling_reign/: changelog.text  data.json
diffs/cosmic_eclipse/: changelog.text  data.json
diffs/crimson_invasion/: changelog.text  data.json
diffs/crown_zenith/: changelog.text  data.json
diffs/crystal_guardians/: changelog.text  data.json
diffs/dark_explorers/: changelog.text  data.json
diffs/darkness_ablaze/: changelog.text  data.json
diffs/delta_species/: changelog.text  data.json
diffs/deoxys/: changelog.text  data.json
mapping/: set_operations.json
src/: main.rs
(+642 files in other folders)
